syntax = "proto3";
package movie;
// Définition du message movie
message Movie {
string id = 1;
string title = 2;
string description = 3;
// Ajouter d'autres champs de données pour les films au besoin
}
// Définition des messages de requête et de réponse pour les méthodes d
message GetMovieRequest {
string movie_id = 1;
}
message GetMovieResponse {
Movie movie = 1;
}
message ListAllMoviesRequest {
string query = 1;
}
message ListAllMoviesResponse {
repeated Movie movies = 1;
}
// Ajouter dans le message Movie
message CreateMovieRequest {
  string title = 1;
  string description = 2;
}

message CreateMovieResponse {
  Movie movie = 1;
}

// Définition du service de films
service MovieService {
rpc GetMovie(GetMovieRequest) returns (GetMovieResponse);
rpc ListAllMovies(ListAllMoviesRequest) returns (ListAllMoviesResponse);
rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse);
// Ajouter d'autres méthodes au besoin
}